# tog

./: .gitignore  CMakeLists.txt  README.md  compile.py  mix.exs
apps/tog_client/: README.md  mix.exs
apps/tog_client/config/: config.exs
apps/tog_client/lib/: acceptor.ex  cache.ex  compiler.ex  main.ex  tog_client.ex
apps/tog_client/test/: tog_client_test.exs
rel/: config.exs
togc/: CMakeLists.txt  main.cpp
